[package]
name = "s2n-quic-h3"
# this in an unpublished internal crate so the version should not be changed
version = "0.1.0"
authors = ["AWS s2n"]
edition = "2021"
rust-version = "1.71"
license = "Apache-2.0"
# this contains an http3 implementation for testing purposes and should not be published
publish = false

[dependencies]
bytes = { version = "1", default-features = false }
futures = { version = "0.3", default-features = false }
s2n-quic = { version = "1.32", default-features = false, features = ["provider-address-token-default", "provider-tls-rustls"] }
s2n-quic-core = { version = "0.33", default-features = false }

[dependencies.h3]
git = "https://github.com/SergioBenitez/h3"
